# My-Hermes-Desktop

./: CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.harness/product/: backlog.md
.harness/registry/: _index.md
.harness/registry/sessions/: 2026-05-13-1122.md  2026-05-13-1152.md  2026-05-13-2219.md  2026-05-20-1530.md  2026-05-22-1102.md
.harness/state/: constraints.md  features.json
docs/: product-design-ux-analysis.md
resources/dashboard-themes/: apple.yaml  claude.yaml  warp.yaml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  stream.rs
src-tauri/src/commands/: background.rs  chat.rs  dashboard.rs  files.rs  mod.rs  sessions.rs  setup.rs  terminal.rs  tray.rs
src/components/: AppTitleBar.tsx  ChatView.tsx  FileTreePanel.tsx  Icon.tsx  KeyboardShortcutsPanel.tsx  NavBar.tsx  Sidebar.tsx  SnapshotPanel.tsx  TerminalModal.tsx  TerminalPanel.tsx
src/components/chat/: AtMentionMenu.tsx  GoalBar.tsx  GuideBot.tsx  MessageBubble.tsx  PersonalityPicker.tsx  RefPickerPanel.tsx
src/hooks/: useTerminalBg.ts  useTheme.ts
src/pages/: ChatPage.tsx  DashboardPage.tsx  OnboardingPage.tsx  SettingsPage.tsx
src/utils/: conversationCompare.test.ts  conversationCompare.ts  conversationGroups.test.ts  conversationGroups.ts  messageActions.test.ts  messageActions.ts
(+5 files in other folders)
