[package]
name = "hermes-desktop"
version = "0.1.0"
description = "A beautiful desktop UI for Hermes Agent"
authors = ["吴桂荣 <wuguirong@gmail.com>"]
license = "Apache-2.0"
repository = "https://gitee.com/wuguirong/hermes-desktop"
edition = "2021"

[lib]
name = "hermes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
portable-pty = "0.9"
base64 = "0.22"
